charts/ccsm-helm/test/operate/golden/deployment.golden.yaml
---
# Source: ccsm-helm/charts/operate/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ccsm-helm-test-operate
  labels:
    app: camunda-cloud-self-managed
    app.kubernetes.io/name: operate
    helm.sh/chart: operate-0.0.15
    app.kubernetes.io/instance: ccsm-helm-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.3.1
    app.kubernetes.io/part-of: camunda-cloud-self-managed
    app.kubernetes.io/component: operate
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda-cloud-self-managed
      app.kubernetes.io/name: operate
      helm.sh/chart: operate-0.0.15
      app.kubernetes.io/instance: ccsm-helm-test
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/version: 1.3.1
      app.kubernetes.io/part-of: camunda-cloud-self-managed
      app.kubernetes.io/component: operate
  template:
    metadata:
      labels:
        app: camunda-cloud-self-managed
        app.kubernetes.io/name: operate
        helm.sh/chart: operate-0.0.15
        app.kubernetes.io/instance: ccsm-helm-test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: 1.3.1
        app.kubernetes.io/part-of: camunda-cloud-self-managed
        app.kubernetes.io/component: operate
    spec:
      containers:
      - name: operate
        image: "camunda/operate:1.3.4"
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/local/operate/config/application.yml
          subPath: application.yml
      volumes:
      - name: config
        configMap:
          name: ccsm-helm-test-operate
          defaultMode: 0744
