charts/ccsm-helm/test/operate/golden/ingress-all-enabled.golden.yaml
---
# Source: ccsm-helm/charts/operate/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ccsm-helm-test-operate
  labels: 
    app: camunda-cloud-self-managed
    app.kubernetes.io/name: operate
    helm.sh/chart: operate-0.0.16
    app.kubernetes.io/instance: ccsm-helm-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 1.3.1
    app.kubernetes.io/part-of: camunda-cloud-self-managed
    app.kubernetes.io/component: operate
  annotations: 
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ccsm-helm-test-operate
                port:
                  number: 80
  tls:
    - hosts:
        - local
      secretName: my-secret
